# Async_API_sprint_1

./: .env.dist  .env.template  .gitignore  Dockerfile  README.md  config.json  docker-compose-full-project.yaml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  main.py  movies_API.postman_collection.json  pyproject.toml  requirements.txt
api/v1/: film.py  genre.py  person.py
core/: config.py  logger.py
db/: __init__.py
docker/nginx/: nginx.conf
docker/nginx/configs/: site.conf
docker/postgres/: init.sql
models/: __init__.py  base.py  constants.py  films.py  genres.py  persons.py
services/: __init__.py  api_params.py  base.py  film.py  genre.py  person.py
tests/functional/: Dockerfile  conftest.py  docker-compose.yml  entrypoint.sh  requirements.txt  settings.py
tests/functional/src/: film_search_test.py  film_test.py  genre_search_test.py  genre_test.py  init_test.py  person_search_test.py  person_test.py  search_test.py
tests/functional/testdata/: movies_index_schema.txt  result.txt  source.txt
tests/functional/utils/: utils.py
utils/: url_misc.py
